# phx-quantum

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: random.h  types.h
core/src/: random.cpp
docs/: index.md  math_engine.md  measurement.md  multi_qubit_gates.md  qubits_and_states.md  single_qubit_gates.md
examples/: CMakeLists.txt  bell_state.cpp  teleportation.cpp
math/: CMakeLists.txt
math/include/math/: linalg.h  matrix.h
quantum/: CMakeLists.txt
quantum/include/quantum/: circuit.h  gates.h  measurement.h  qubit.h
quantum/src/: circuit.cpp  gates.cpp  measurement.cpp  qubit.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
tensor/: CMakeLists.txt
tensor/include/tensor/: tensor.h
tests/: CMakeLists.txt  test_circuit.cpp  test_gates.cpp  test_matrix.cpp  test_measurement.cpp  test_qubit.cpp  test_tensor.cpp
